--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+        <title>Pétion Ville - 2010 Earthquake Safety</title>
+        <link href="index.css" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <h1>Hello</h1>
+        </header>
+        <main>
 
+        </main>
+    </body>
+</html>
