--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title>Pétion Ville - 2010 Earthquake Safety</title>
         <link href="index.css" rel="stylesheet">
+        <link href="pexels-logo.svg" rel="icon"><!--Change Logo-->
     </head>
     <body>
         <header>
-            <h1>Hello</h1>
+            <nav>
+                <ul>
+                    <div class="left_nav">
+                        <li class="logo"><a href="index.html"><!--Logo img here--></a></li>
+                        <li class="wordlogo"><a href="index.html">Organization Name Here</a></li>
+                    </div>
+                    <div class="right_nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Donate</a></li>
+                        <li><a href=#>Learn More</a></li>
+                    </div>
+                </ul>
+            </nav>
         </header>
         <main>
-
+            <h1>Pétion Ville Relief Aid</h1>
         </main>
     </body>
 </html>
