--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <nav>
                 <ul>
                     <div class="left_nav">
-                        <li class="logo"><a href="index.html"><!--Logo img here--></a></li>
-                        <li class="wordlogo"><a href="index.html">Organization Name Here</a></li>
+                        <li class="logo"><a href="index.html"><img src="Logo.PNG"></a></li>
+                        <li class="wordlogo"><a href="index.html">Hope Providers for a Greater Future</a></li>
                     </div>
                     <div class="right_nav">
                         <li><a href="index.html">Home</a></li>
@@ -23,7 +23,11 @@
             </nav>
         </header>
         <main>
-            <h1>Pétion Ville Relief Aid</h1>
+            <section>
+                <div class="center_logo">
+                    <img src="Logo.PNG">
+                </div>
+            </section>
         </main>
     </body>
 </html>
