--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     </div>
                     <div class="right_nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Donate</a></li>
-                        <li><a href=#>Learn More</a></li>
+                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="learnmore.html">Learn More</a></li>
                     </div>
                 </ul>
             </nav>
@@ -26,9 +26,22 @@
             <section>
                 <div class="center_logo">
                     <img src="Logo.PNG">
-                </div>
-                
+                </div> 
+            </section>
+            <section class="ms">
+                <h2>Mission Statement</h2>
+                <p>We are an organization that will provide resources to the affected residents of Haiti in order to keep them on their feet by providing food and shelter until larger international organizations can provide their assistance. 
+                Together with your help we can gather the resources needed to help. With the cooperation of the residents of Haiti, we are going to provide the resources they require. 
+                No affected citizen will be left out.
+                </p>
+            </section>
+            <section class="map">
+                <h2>Map</h2>
+
             </section>
         </main>
+        <footer>
+            &copy Group 4 Complexe Emergencies
+        </footer>
     </body>
 </html>
