--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="donate.html">Donate</a></li>
                         <li><a href="learnmore.html">Learn More</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </div>
                 </ul>
             </nav>
