commit done by Daniel

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="right_nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="https://www.canadahelps.org/en/donate/" target="blank">Donate</a></li>
                         <li><a href="learnmore.html">Learn More</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </div>
@@ -39,6 +39,28 @@
             <section class="map">
                 <h2>Map</h2>
 
+            </section>
+            <section class="Info">
+                <img src="PetionVille.jpg" alt="PetionVille map">
+                <div>
+                    <h2>History/vulnerability of haiti</h2>
+                    <p>Haiti has suffered many natural disasters over the past 5 centries. ranging any where from Earthquakes, storms, hurricanes and much More.
+                    Even before the quake Haiti was the poorest country in the western hemisphere, had weak infrastructures, unstable government. Due to this reason, Haiti 
+               
+                    </p>
+                </div>
+                <div>
+                    <h2>Why was is so desructive</h2>
+                    <p></p>
+                </div>
+                <img src="Haiti Earthquake.jpg" alt="Haiti Earthquake Image">
+                <img src="Stats1.jpeg" alt="Stats">
+                <div>
+                    <h2>Statistics/Facts</h2>
+                    <p></p>
+
+                </div>
+            
             </section>
         </main>
         <footer>
