--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
                 </p>
             </section>
             <section class="map">
+                
                 <h2>Map</h2>
-
+                
+                <div class="map_img">
+                    <img src="Map.png">
+                </div>
             </section>
             <section class="Info">
                 <img src="PetionVille.jpg" alt="PetionVille map">
