--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title>Pétion Ville - 2010 Earthquake Safety</title>
         <link href="index.css" rel="stylesheet">
-        <link href="pexels-logo.svg" rel="icon"><!--Change Logo-->
+        <link href="Logo.PNG" rel="icon">
     </head>
     <body>
         <header>
