--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <li class="wordlogo"><a href="index.html">Hope Providers for a Greater Future</a></li>
                     </div>
                     <div class="right_nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li class="words"><a href="index.html">Home</a></li>
                         <li><a href="https://www.canadahelps.org/en/donate/" target="blank">Donate</a></li>
                         <li><a href="learnmore.html">Learn More</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
