--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@
                     </p>
                 </div>
                 <div>
-                    <h2>Why was is so desructive</h2>
-                    <p></p>
+                    <h2>Why was it so destructive?</h2>
+                    <ul>
+                        <li>Poor Infrastructure</li>
+                        <li>Close to the surface of the earth</li>
+                        <li>Developing Country</li>
+                        <li>Recovering from a storm and 3 hurracanes from 2008</li>
+                    </ul>
                 </div>
                 <img src="Haiti Earthquake.jpg" alt="Haiti Earthquake Image">
                 <img src="Stats1.jpeg" alt="Stats">
