--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="right_nav">
                         <li class="words"><a href="index.html">Home</a></li>
-                        <li><a href="https://www.canadahelps.org/en/donate/" target="blank">Donate</a></li>
+                        <li><a href="https://www.canadahelps.org/en/crisis-relief-centre/2010-haiti-earthquake/#donate" target="blank">Donate</a></li>
                         <li><a href="learnmore.html">Learn More</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </div>
@@ -66,7 +66,12 @@
                 <img src="Stats1.jpeg" alt="Stats">
                 <div>
                     <h2>Statistics/Facts</h2>
-                    <p></p>
+                    <ul>
+                        <li>3,000,000 People Affected</li>
+                        <li>5,000,000 People Displaced</li>
+                        <li>250,000 Estimated Deaths</li>
+                        <li>300,000 Injured</li>
+                    </ul>
 
                 </div>
             
