--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h2>Map</h2>
                 
                 <div class="map_img">
-                    <img src="Map.PNG">
+                    <img src="Map.jpg">
                 </div>
             </section>
             <section class="Info">
