--- a/learnmore.html
+++ b/learnmore.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+        <title>Pétion Ville - 2010 Earthquake Safety</title>
+        <link href="index.css" rel="stylesheet">
+        <link href="Logo.PNG" rel="icon">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <div class="left_nav">
+                        <li class="logo"><a href="index.html"><img src="Logo.PNG"></a></li>
+                        <li class="wordlogo"><a href="index.html">Hope Providers for a Greater Future</a></li>
+                    </div>
+                    <div class="right_nav">
+                        <li class="words"><a href="index.html">Home</a></li>
+                        <li><a href="https://www.canadahelps.org/en/crisis-relief-centre/2010-haiti-earthquake/#donate" target="blank">Donate</a></li>
+                        <li><a href="learnmore.html">Learn More</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </div>
+                </ul>
+            </nav>
+        </header>
+        <main>
 
+        </main>
+        <footer>
+            &copy Group 4 Complexe Emergencies
+        </footer>
+    </body>
+</html>
