--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,8 @@
             <a href="mailto:jungsoo.lee4@gmail.com"> Jungsoo Lee</a><br>
             <a href="mailto:matt.db@outlook.com">Matthew DeBellefeuille</a><br>
         </address>
-
+        <footer>
+            &copy Group 4 Complexe Emergencies
+        </footer>
     </body>
 </html>
