--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                         <li>300,000 Injured</li>
                     </ul>
 
-                </div>
-            
+                
+                    <img src="Earthquake-Image.jpg">
+            </div>
             </section>
         </main>
         <footer>
